saturn-account-macros/tests/compile_fail/ref_slice_without_len.rs
use saturn_account_macros::Accounts;

#[derive(Accounts)]
struct RefSliceNoLen<'info> {
    #[account]
    pdas: &'info [arch_program::account::AccountInfo<'info>],
}

fn main() {} 